2010-10-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* src/res/objects_init.xml.in: added ICMPv6 object "parameter
	problem" (type 4, any code) per SF feature request 3094743.  Also
	added service group object "ipv6 unreachable messages" that
	includes ICMPv6 messages "destination unreachable", "packet too
	big", "parameter problem" and "time exceeded" per SF feature
	request 3094758

	* configlets/linux24/automatic_rules: implemented SF feature
	request 3094738 "Set the HL to 255 for IPv6 Neighbor
	Discovery". Neighbor discovery packets must have hop limit of 255
	per RFC 2461. Automatically generated rules that match neighbor
	discovery packets will math hooplimit 255.

	* configlets/linux24/update_addresses: fixed SF bug 3091069:
	"Routing configuration failed". Iptables script generated by
	fwbuilder did not configure broadcast when it added ip addresses
	to interfaces. Using "ip addr add ADDR/NM boradcast + dev INTF"
	syntax to do this.

	* OSConfigurator_bsd.cpp (compare_names): fixed #1807 "wrong order
	of address assignment in the generated OpenBSD/PF/CARP cluster
	configuration". Need to assign ip addresses to regular interfaces
	before trying to assign them to carp interfaces.

	* configlets/linux24/load_modules: fixed #1820 "skip module
	"nf_conntrack_ipv6" if generated script has no ipv6 rules"
	Shell function load_modules should not try to load module
	nf_conntrack_ipv6 if generated script does not load any ipv6
	rules. Loading this module fails if ipv6 has been disabled in
	the kernel.

2010-10-29  Vadim Kurland  <vadim@netcitadel.com>

	* run_time_wrappers: fix for the SF bug #3095615 "reopen no
	PREROUTING rule with *-Interface - ID: 3077132". Configlet used wrong
	shell variable to access ip address of a wildcard interface.

	* VERSION (FWB_MICRO_VERSION): started 4.1.3

2010-10-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* configlets/pix_os/installer_commands_reg_user: using command